<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    android:layout_height="match_parent"
    android:background="@drawable/paddy"
    tools:context=".MainActivity"
    tools:ignore="InvalidId">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="28dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/nggg"
            android:layout_marginStart="75dp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/dirtywhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:alpha="0.9"
        android:layout_marginBottom="-20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:id="@+id/log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

               <View
                   android:layout_width="wrap_content"
                   android:layout_height="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/rsbsa_number"
                android:textColor="#757575"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />


            <EditText
                android:id="@+id/rsbsa"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="5dp"
                android:hint="@string/number"
                android:inputType="number"
                android:minHeight="48dp"
                android:textSize="15sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/text_pass"
                android:textColor="#757575"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:drawableStart="@drawable/lock_icon"
                android:drawablePadding="5dp"
                android:hint="@string/login_pass"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textSize="15sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="@string/login"
                android:textColor="#1B5E20"
                android:textSize="25sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="5dp"/>

            <TextView
                android:id="@+id/forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="123dp"
                android:text="@string/forgot_password"
                android:textColor="#616161">


            </TextView>

            <View
                android:layout_width="320dp"
                android:layout_height="2dp"
                android:background="#6B8C9A99"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"/>






        </LinearLayout>

        
        
        
    </androidx.cardview.widget.CardView>

</RelativeLayout>











