<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/corrn"
        android:padding="28dp">
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardBackgroundColor="@color/dirtywhite"
        android:alpha="0.9"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input"
                android:drawablePadding="5dp"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry"
                android:autofillHints="" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input"
                android:drawablePadding="5dp"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry"
                android:autofillHints="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input"
                android:drawablePadding="5dp"
                android:hint="@string/rsbsa"
                android:inputType="number"
                android:paddingStart="10dp"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry"
                android:autofillHints="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_sign"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry"
                android:autofillHints="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_confirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input"
                android:drawablePadding="5dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry"
                android:autofillHints="" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="25sp"
                tools:ignore="TextSizeCheck" />


            <View
                android:layout_width="320dp"
                android:layout_height="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:alpha="0.3"
                android:background="@color/black" />

            <TextView
                android:id="@+id/alr_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:text="@string/already_have_an_account_log_in_here"
                android:textColor="#616161" >
                

            </TextView>


        </LinearLayout>


    </androidx.cardview.widget.CardView>





</RelativeLayout>